# crouge

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.c  mem.c  mem.h
